[gd_scene load_steps=14 format=3 uid="uid://8b1oiirh33h4"]

[ext_resource type="Texture2D" uid="uid://dko68kk50nakh" path="res://assets/textures/interiors/Doors.png" id="1_ldeki"]
[ext_resource type="Script" uid="uid://d4epudd7fx5sv" path="res://scripts/house/door_player_detect.gd" id="2_irsga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u17l6"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5s8t"]
size = Vector2(18, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gagl4"]
atlas = ExtResource("1_ldeki")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8av0d"]
atlas = ExtResource("1_ldeki")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_13i54"]
atlas = ExtResource("1_ldeki")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq0q4"]
atlas = ExtResource("1_ldeki")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mga56"]
atlas = ExtResource("1_ldeki")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tssm"]
atlas = ExtResource("1_ldeki")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8tce"]
atlas = ExtResource("1_ldeki")
region = Rect2(0, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2vg07"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gagl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8av0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13i54")
}],
"loop": false,
"name": &"close",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq0q4")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mga56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tssm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8tce")
}],
"loop": false,
"name": &"open",
"speed": 8.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_cam6j"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[node name="Door" type="StaticBody2D"]
y_sort_enabled = true
collision_layer = 2
collision_mask = 90
script = ExtResource("2_irsga")

[node name="BlockPlayerCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_u17l6")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="PlayerDetect" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_l5s8t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2vg07")
animation = &"open"
autoplay = "default"

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_cam6j")

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
